Table users {
  id serial [primary key]
  email varchar(255) [not null, unique] 
  password_hash varchar(255) [not null]
  role varchar(255) [default: 'client']
  created_at timestamp [default: `now()`]
}

Table categories {
  id serial [primary key]
  name varchar(255) [not null]
  slug varchar(255) [not null, unique]
}

Table products {
  id serial [primary key]
  category_id integer
  name varchar(255) [not null]
  description text
  price decimal(12, 2) [not null, check: `price >= 0`]
  stock_quantity integer [default: 0, check: `stock_quantity >= 0`]
  image_url text
  created_at timestamp [default: `now()`]
}

Table orders {
  id serial [primary key]
  user_id integer
  total_price decimal(12, 2) [not null, check: `total_price >= 0`]
  status varchar(255) [default: 'pending']
  shipping_address text [not null]
  created_at timestamp [default: `now()`]
}

Table order_items {
  id serial [primary key]
  order_id integer
  product_id integer
  order_quantity integer [not null, check: `order_quantity >= 0`]
  unit_price decimal(12, 2) [not null, check: `unit_price >= 0`]
}

Ref: products.category_id > categories.id
Ref: orders.user_id > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
